styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap");

body {
  padding-top: 25px;
  font-family: "Inter", sans-serif;
  text-align: center;
  font-size: 32px;
  height: 100%;
  background-image: url("./images/pattern-curve.svg");
  background-position: bottom left;
  background-repeat: no-repeat;
  background-size: 50%;
}

#app {
  margin: auto;
  width: 375px;
  max-width: 100%;
}
.article {
  display: none;
  justify-content: center;
  flex-direction: column;
}

.img-container {
  background-image: url("./images/pattern-bg.svg");
  background-size: 100%;
  margin: auto;
  width: 330px;
  height: 310px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.img-container img {
  width: 255px;
  height: 255px;
  box-shadow: 0 35px 35px -20px rgb(0, 0, 0, 0.3);
}

.controls {
  position: absolute;
  bottom: 9px;
  width: 75px;
  height: 36px;
  display: flex;
  background-color: white;
  justify-content: space-between;
  align-items: center;
  border-radius: 20px;
  padding: 10px;

  box-sizing: border-box;
}
.controls button {
  font-size: 1rem;
  color: rgba(0, 0, 0, 0.5);
  border: 0;
  background: #fff;
}

#testimonial-container {
  /* background-color: black; */
  position: relative;
  margin-top: 25px;
  padding-bottom: 35px;
  font-size: 1.1rem;
  word-spacing: 1px;
  line-height: 1.5rem;
}

.quotes-img {
  width: 3rem;
  margin: auto;
}

#testimonial-container p {
  background-image: url("./images/pattern-quotes.svg");
  background-repeat: no-repeat;
  background-size: 3rem;
  background-position: top center;
  padding-top: 20px;
  margin: 20px 25px 20px 25px;
  font-weight: 500;
  color: rgba(0, 0, 0, 0.6);
}

#testimonial-container h3 {
  font-weight: 700;
  margin-bottom: 0;
  padding: 0;
  font-size: 1rem;
}

#testimonial-container h4 {
  margin-top: 0;
  padding: 0;
  font-weight: 500;
  font-size: 0.9rem;
  color: rgba(0, 0, 0, 0.5);
}

.attribution {
  position: fixed;
  text-align: center;
  bottom: 0;
  left: 0;
  font-size: 14px;
}

.showing {
  display: flex;
}

@media only screen and (min-width: 1440px) {
  body {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  #app {
    margin: 0px;
    padding: 0;
    width: 1200px;
  }

  #testimonial-container {
    text-align: left;
    margin-left: 20px;
    margin-right: -20px;
    font-size: 1.7rem;
    font-weight: 300;
    word-spacing: 0.25rem;
    line-height: 2.8rem;
  }

  #testimonial-container p,
  #testimonial-container h3,
  #testimonial-container h4 {
    text-align: left;
    padding: 0;
    margin: 0;
  }

  #testimonial-container p {
    padding-top: 50px;
    margin-bottom: 20px;
    margin-right: 0px;
  }

  #testimonial-container h3,
  #testimonial-container h4 {
    display: inline;
    font-size: 1.3rem;
  }

  .showing {
    flex-direction: row-reverse;
    align-items: center;
    width: 100%;
  }
  .img-container {
    background-size: 100% 100%;
    background-repeat: no-repeat;
    margin: auto;
    width: 640px;
    height: 650px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
  }

  .img-container img {
    width: 535px;
    height: 540px;
    margin-right: 65px;
    box-shadow: 0 35px 35px -20px rgb(0, 0, 0, 0.3);
  }

  .controls {
    height: 60px;
    width: 120px;
    border-radius: 30px;
    bottom: 30px;
    left: 50px;
  }
  .controls button {
    font-size: 1.5rem;
  }
}

